# 2D-box-game

./: .gitignore  CMakeLists.txt  README.md
src/: cell.h  main.cpp  pixel.h
src/render/: grid.hpp
src/utils/: Vec2.h
